--- a/html/faq.html
+++ b/html/faq.html
@@ -107,7 +107,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 <ul>
 <strong>Tips:</strong>
 <li>In case of troubles/problems during transfer, <b><u><font color="red">first check the hts-log.txt (and hts-err.txt) files to figure out what happened</b></u></font>. These log files report all
-events that may be useful to detect a problem. You can also ajust the debug level of the log files in the option
+events that may be useful to detect a problem. You can also adjust the debug level of the log files in the option
 </li><li>
 The tutorial written by Fred Cohen is a very good document to read, to understand how to use the engine,
 how the command line version works, and how the window version works, too! All options are described and explained in
