--- a/html/faq.html
+++ b/html/faq.html
@@ -107,7 +107,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 <ul>
 <strong>Tips:</strong>
 <li>In case of troubles/problems during transfer, <b><u><font color="red">first check the hts-log.txt (and hts-err.txt) files to figure out what happened</b></u></font>. These log files report all
-events that may be useful to detect a problem. You can also ajust the debug level of the log files in the option
+events that may be useful to detect a problem. You can also adjust the debug level of the log files in the option
 </li><li>
 The tutorial written by Fred Cohen is a very good document to read, to understand how to use the engine,
 how the command line version works, and how the window version works, too! All options are described and explained in
@@ -263,7 +263,7 @@ clear language!
 
 <li><a href="#QM8">Can HTTrack generates HP-UX or ISO9660 compatible files?</a><br></li>
 
-<li><a href="#QM9">If there any SOCKS support?</a><br></li>
+<li><a href="#QM9">Is there any SOCKS support?</a><br></li>
 
 <li><a href="#QM10">What's this hts-cache directory? Can I remove it?</a><br></li>
 
@@ -836,7 +836,7 @@ A: <em>Yes. Use user:password@your_proxy_name as your proxy name (example: <tt>s
 <br><br><a NAME="QM8">Q: <strong>Can HTTrack generates HP-UX or ISO9660 compatible files?</strong></a><br>
 A: <em>Yes. See the build options (-N, or see the WinHTTrack options)</em>
 
-<br><br><a NAME="QM9">Q: <strong>If there any SOCKS support?</strong></a><br>
+<br><br><a NAME="QM9">Q: <strong>Is there any SOCKS support?</strong></a><br>
 A: <em>Not yet!</em>
 
 <br><br><a NAME="QM10">Q: <strong>What's this hts-cache directory? Can I remove it?</strong></a><br>
